# EvMAPPER

./: .gitignore  README.md
CAD/: .gitignore  BFS-U3-32S4-C.SLDPRT  CameraAssembly.SLDASM  CameraHolder.SLDPRT  CameraMount.SLDPRT  High-Altitude-Sync-Board.SLDASM  MountingBlock.SLDPRT  MountingBlockLeft.SLDPRT  MountingBlockRight.SLDPRT  QuadPlate.SLDPRT  SilkyEvCam_Case_rev100.SLDPRT  SyncPCB.SLDPRT  standoff.SLDPRT  vn100_rugged.SLDASM
CAD/lm5jcm-wp/: lm5jcm-wp.SLDASM  lm5jcm-wp.txt  lm5jcm-wp_01.SLDPRT  lm5jcm-wp_02.SLDPRT  lm5jcm-wp_03.SLDPRT  lm5jcm-wp_04.SLDPRT  lm5jcm-wp_05.SLDPRT  lm5jcm-wp_06.SLDPRT  lm5jcm-wp_07.SLDPRT  lm5jcm-wp_08.SLDPRT  lm5jcm-wp_09.SLDPRT  lm5jcm-wp_10.SLDPRT
Notebooks/: .gitignore  IMU_timestamp_check.ipynb  bag_reader_ros2.py  image_extractor.ipynb  offset_computation.ipynb  pyproject.toml  sync_verification.ipynb  time_synchronization.ipynb  time_synchronization_tests.ipynb  video_generator.ipynb
PCB/: .gitignore
PCB/High-Altitude-Sync-Board/: High-Altitude-Sync-Board.kicad_pcb  High-Altitude-Sync-Board.kicad_pro  High-Altitude-Sync-Board.kicad_sch  High-Altitude-Sync-Board.kicad_sym
PCB/High-Altitude-Sync-Board/3D/: 2129691-1.step  SN74AXC8T245PWR.step  STM32L011F3U6TR.step
PCB/High-Altitude-Sync-Board/Footprints/: SOP65P640X120-24N.kicad_mod  TE_2129691-1.kicad_mod
SyncPCB/: SyncPCB.kicad_pcb  SyncPCB.kicad_prl  SyncPCB.kicad_pro
ha_python_utils/: bag_reader.py  bag_synchronizer.py  constants.py  event_extractor.py
