[tool.poetry]
name = "high-altitude-ec-notebooks"
version = "0.1.0"
description = ""
authors = ["Fernando Cladera <fcladera@fcladera.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.21.1"
jupyterlab = "^3.1.4"
jupyterlab-widgets = "^1.00"
ipywidgets = "^7.6.3"
dv = "^1.0.10"
matplotlib="^3.4.2"
ipympl="^0.7.0"
# mpl-interactions="^0.18.0"
scipy="^1.7.1"
opencv-python="^4.5"
mcap = "^1.1.1"
mcap-ros2-support = "^0.5.3"
nbstripout = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
